# CloudStream

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  build.bat  build.sh  build_windows.bat
config/: cloudstream.conf
examples/: simple_client.cpp
include/core/: PointCloud.h  PointCloudProcessor.h
include/network/: Client.h  NetworkManager.h  Server.h  StreamProtocol.h
include/utils/: Logger.h  MathUtils.h  ThreadPool.h  Timer.h
include/visualization/: GLWidget.h  MainWindow.h  PointCloudRenderer.h
resources/shaders/: point_cloud.frag  point_cloud.vert
src/: main.cpp
src/core/: PointCloud.cpp  PointCloudProcessor.cpp
src/network/: Client.cpp  NetworkManager.cpp  Server.cpp  StreamProtocol.cpp
src/utils/: Logger.cpp  ThreadPool.cpp  Timer.cpp
src/visualization/: GLWidget.cpp  MainWindow.cpp  PointCloudRenderer.cpp
tests/: test_point_cloud.cpp
